Stop the full drop-down navbar from overflowing the width of the screen. Margin of -0.4em is slightly too big which causes a scrollbar to show up

--- a/public/assets/pub/css/main.css
+++ b/public/assets/pub/css/main.css
@@ -86,7 +86,7 @@ header#hdr-persistent nav#full-navigation
     display: none;
     grid-column: 1/4;
     background-color: black;
-    margin: 0 -0.4em;
+    margin: 0 -0.3em;
     padding: 0 2.5rem;
     color: #aaa;
     font-size: 1.3em;
